--- a/API_qlddata/appsettings.Development.json
+++ b/API_qlddata/appsettings.Development.json
@@ -1,9 +1,15 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "ConnectionForDatabase": "server=127.0.0.1;user=root;password=123456;port=3306;database=qlddata;"
+    },
+    "URLForPremierAPI": "https://dummy2.premierducts.com.au",
+    "Urls": "https://localhost:5004"
 }
